--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <include src="./views/header.html"></include>
         <div class="m-10 rounded">
             <div class="container-index pt-8">
-                <div class="md:w-1/2 bg-colorIndexBG text-center flex flex-col justify-center" >
+                <div class="md:w-1/2 bg-colorIndexBG text-center flexColCenter" >
                     <h1 class="text-4xl mb-4">Club de Ajedrez ChessFun</h1>
                     <p class="text-base mx-12 leading-10">
                         ¿Te gustan los juegos de lógica y estrategia? ¿Disfrutas
@@ -35,7 +35,7 @@
                     <img src="./assets/images/chessgame.jpg" alt="" class="w-full h-auto rounded-lg">
                 </div>
                 <div class="md:w-1/2 flex justify-center">
-                    <div class="text-center flex flex-col justify-center mx-12">
+                    <div class="text-center flexColCenter mx-12">
                         <h5 class="text-xl mb-4">
                             En nuestro club podrás aprender y desarrollar las habilidades necesarias para jugar con amigos y en campeonatos profesionales
                         </h5>
