--- a/src/members.html
+++ b/src/members.html
@@ -20,7 +20,7 @@
         <include src="./views/header.html"></include>
         <div class="container mx-auto mt-24">
             <div>
-                <h2 class="text-2xl font-bold mb-4">
+                <h2 class="text-2xl text-center font-bold mb-4">
                     Miembros del club
                 </h2>
                 <include src="./views/members_container.html"></include>
